harness/test/errors/039_did_you_mean.eu
b: { upper-case: "hello", lower-case: "world" }
x: b.uper-case
